[Update] Agregando relación entre entidades carro y tarjeta (una tarjeta corresponde a muchos carros)

--- a/app/Resources/views/carro/_form.html.twig
+++ b/app/Resources/views/carro/_form.html.twig
@@ -31,6 +31,9 @@
         <div class="col-md-12">
             {{ form_row(form.tipo, {'attr': {'class': 'select2'}}) }}
         </div>
+        <div class="col-md-12">
+            {{ form_row(form.tarjeta, {'attr': {'class': 'select2'}}) }}
+        </div>
 
         {{ form_widget(form._token) }}
 
