--- a/app/Resources/views/carro/show.html.twig
+++ b/app/Resources/views/carro/show.html.twig
@@ -50,6 +50,10 @@
                             <th>{{ 'car.type'|trans }}</th>
                             <td>{{ carro.tipo|default('-') }}</td>
                         </tr>
+                        <tr>
+                            <th>{{ 'car.card'|trans }}</th>
+                            <td>{{ carro.tarjeta|default('-') }}</td>
+                        </tr>
                         </tbody>
                     </table>
                 </div>
