--- a/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
@@ -27,10 +27,10 @@
     </div>
 
     <div class="m-top-md p-top-sm">
-        <a href="#signin" class="btn btn-success block"><i
-                    class="fa fa-sign-in"></i> {{ 'security.login.submit'|trans }}</a>
-        {#<button type="submit" class="btn btn-success btn-block"><i#}
-        {#class="fa fa-sign-in"></i> {{ 'security.login.submit'|trans }}</button>#}
+        {#<a href="#signin" class="btn btn-success block"><i#}
+                    {#class="fa fa-sign-in"></i> {{ 'security.login.submit'|trans }}</a>#}
+        <button type="submit" class="btn btn-success btn-block"><i
+                    class="fa fa-sign-in"></i> {{ 'security.login.submit'|trans }}</button>
     </div>
 
     {#<div class="m-top-md p-top-sm">#}
