--- a/app/Resources/views/_sidebarmenu.html.twig
+++ b/app/Resources/views/_sidebarmenu.html.twig
@@ -16,23 +16,41 @@
                         </span>
                     </a>
                 </li>
-                <li class="bg-palette2">
-                    <a href="{{ path('area_index') }}">
+                <li class="openable bg-palette3">
+                    <a href="#">
                         <span class="menu-content block">
-                            <span class="menu-icon"><i class="block fa fa-map-signs fa-lg"></i></span>
-                            <span class="text m-left-sm">{{ 'section.title'|transchoice(2) }}</span>
+                            <span class="menu-icon"><i class="block fa fa-ellipsis-h fa-lg"></i></span>
+                            <span class="text m-left-sm">{{ 'manage.section.title'|trans }}</span>
+                            <span class="submenu-icon"></span>
                         </span>
-                        <span class="menu-content-hover block"> {{ 'section.alt'|trans }}</span>
+                        <span class="menu-content-hover block"> {{ 'manage.section.title'|trans }}</span>
                     </a>
-                </li>
-                <li class="bg-palette3">
-                    <a href="{{ path('carro_index') }}">
-                        <span class="menu-content block">
-                            <span class="menu-icon"><i class="block fa fa-automobile fa-lg"></i></span>
-                            <span class="text m-left-sm">{{ 'car.title'|transchoice(2) }}</span>
-                        </span>
-                        <span class="menu-content-hover block"> {{ 'car.alt'|trans }}</span>
-                    </a>
+                    <ul class="submenu bg-palette3" style="display: none;">
+                        <li>
+                            <a href="{{ path('area_index') }}">
+                                <span class="submenu-label">{{ 'section.title'|transchoice(2) }}</span></a>
+                        </li>
+                        <li>
+                            <a href="{{ path('carro_index') }}">
+                                <span class="submenu-label">{{ 'car.title'|transchoice(2) }}</span></a>
+                        </li>
+                        <li>
+                            <a href="{{ path('chofer_index') }}">
+                                <span class="submenu-label">{{ 'driver.title'|transchoice(2) }}</span></a>
+                        </li>
+                        <li>
+                            <a href="{{ path('tarjeta_index') }}">
+                                <span class="submenu-label">{{ 'card.title'|transchoice(2) }}</span></a>
+                        </li>
+                        <li>
+                            <a href="{{ path('asignacionmensual_index') }}">
+                                <span class="submenu-label">{{ 'monthly.assign.title'|transchoice(2) }}</span></a>
+                        </li>
+                        <li>
+                            <a href="{{ path('planasignacion_index') }}">
+                                <span class="submenu-label">{{ 'assign.plan.title'|transchoice(2) }}</span></a>
+                        </li>
+                    </ul>
                 </li>
                 <li class="bg-palette4">
                     <a href="{{ path('chip_index') }}">
@@ -41,15 +59,6 @@
                             <span class="text m-left-sm">{{ 'chip.title'|transchoice(2) }}</span>
                         </span>
                         <span class="menu-content-hover block"> {{ 'chip.alt'|trans }}</span>
-                    </a>
-                </li>
-                <li class="bg-palette1">
-                    <a href="{{ path('chofer_index') }}">
-                        <span class="menu-content block">
-                            <span class="menu-icon"><i class="block fa fa-male fa-lg"></i></span>
-                            <span class="text m-left-sm">{{ 'driver.title'|transchoice(2) }}</span>
-                        </span>
-                        <span class="menu-content-hover block"> {{ 'driver.alt'|trans }}</span>
                     </a>
                 </li>
                 <li class="bg-palette2">
@@ -85,32 +94,25 @@
                         </li>
                     </ul>
                 </li>
-                <li class="bg-palette4">
-                    <a href="{{ path('planasignacion_index') }}">
-                        <span class="menu-content block">
-                            <span class="menu-icon"><i class="block fa fa-book fa-lg"></i></span>
-                            <span class="text m-left-sm">{{ 'assign.plan.title'|transchoice(2) }}</span>
-                        </span>
-                        <span class="menu-content-hover block"> {{ 'assign.plan.alt'|trans }}</span>
-                    </a>
-                </li>
-                <li class="bg-palette1">
-                    <a href="{{ path('solicitud_index') }}">
+                <li class="openable bg-palette3">
+                    <a href="#">
                         <span class="menu-content block">
                             <span class="menu-icon"><i class="block fa fa-sticky-note fa-lg"></i></span>
-                            <span class="text m-left-sm">{{ 'request.title'|transchoice(2) }}</span>
+                            <span class="text m-left-sm">{{ 'request.global'|trans }}</span>
+                            <span class="submenu-icon"></span>
                         </span>
-                        <span class="menu-content-hover block"> {{ 'request.alt'|trans }}</span>
+                        <span class="menu-content-hover block"> {{ 'request.global'|trans }}</span>
                     </a>
-                </li>
-                <li class="bg-palette2">
-                    <a href="{{ path('tarjeta_index') }}">
-                        <span class="menu-content block">
-                            <span class="menu-icon"><i class="block fa fa-credit-card fa-lg"></i></span>
-                            <span class="text m-left-sm">{{ 'card.title'|transchoice(2) }}</span>
-                        </span>
-                        <span class="menu-content-hover block"> {{ 'card.alt'|trans }}</span>
-                    </a>
+                    <ul class="submenu bg-palette3" style="display: none;">
+                        <li>
+                            <a href="{{ path('solicitud_index') }}">
+                                <span class="submenu-label">{{ 'request.title'|transchoice(2) }}</span></a>
+                        </li>
+                        <li>
+                            <a href="javascript:;">
+                                <span class="submenu-label">{{ 'request.card.title'|transchoice(2) }}</span></a>
+                        </li>
+                    </ul>
                 </li>
                 <li class="openable bg-palette3">
                     <a href="#">
