[Update] Estableciendo campo avatar a usuarios
 - Añadiendo entidad para almacenar las imágenes de perfil asociadas a los usuarios

--- a/app/Resources/FOSUserBundle/views/Profile/edit.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/edit.html.twig
@@ -26,5 +26,12 @@
         $(document).ready(function () {
             $('.select2').select2();
         });
+        $(function () {
+            $('a.thumbnail').on('click', function (e) {
+                e.preventDefault();
+
+                $('input[id$="_avatar_file"]').trigger('click');
+            });
+        });
     </script>
 {% endblock %}
