--- a/app/Resources/views/security/user/show.html.twig
+++ b/app/Resources/views/security/user/show.html.twig
@@ -45,6 +45,24 @@
                                 {% endfor %}
                             </td>
                         </tr>
+                        <tr>
+                            <th>{{ 'client.avatar'|trans }}</th>
+                            <td>
+                                {% if user.avatar is defined and user.avatar is not null and user.avatar.getWebPath is defined %}
+                                    <img src="data:image/png;base64,
+                                    {% if user == app.user %}
+                                        {{ app.session.get('photo') }}
+                                    {% else %}
+                                        {{ user.avatar.getWebPath }}
+                                    {% endif %}
+                                    "
+                                         alt="{{ 'client.avatar'|trans }}" width="15%"/>
+                                {% else %}
+                                    <img src="{{ asset('bundles/app/images/default.png') }}"
+                                         alt="{{ 'client.avatar'|trans }}" width="15%"/>
+                                {% endif %}
+                            </td>
+                        </tr>
                         </tbody>
                     </table>
                 </div>
