--- a/app/Resources/views/distribucion/edit.html.twig
+++ b/app/Resources/views/distribucion/edit.html.twig
@@ -22,8 +22,8 @@
 {% block javascripts %}
     <script type="text/javascript">
         $('.select2').select2();
-        // $('.datepicker').datetimepicker({
-        //     'format': 'D/M/Y H:m'
-        // });
+        $('.datepicker').datetimepicker({
+            'format': 'D/M/Y'
+        });
     </script>
 {% endblock %}
