--- a/src/AppBundle/Resources/public/css/app.css
+++ b/src/AppBundle/Resources/public/css/app.css
@@ -29,8 +29,8 @@
 }
 
 .select2-container {
-    width: 100% !important;
-    background-color: #fff;
+    /*width: 100% !important;*/
+    /*background-color: #fff;*/
 }
 
 .select2-container .select2-selection--single {
