--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -9,8 +9,8 @@
     <meta name="description" content="{% block metadescription %}{% endblock %}">
     <meta name="author" content="Pedro Ernesto Matos Santana <pedroernesto20@gmail.com>">
 
-    <link rel="stylesheet" href="{{ asset('assets/vendor/bootstrap/dist/css/bootstrap.css') }}">
-    <link rel="stylesheet" href="{{ asset('assets/vendor/font-awesome/css/font-awesome.css') }}">
+    <link rel="stylesheet" href="{{ asset('assets/vendor/bootstrap/dist/css/bootstrap.min.css') }}">
+    <link rel="stylesheet" href="{{ asset('assets/vendor/font-awesome/css/font-awesome.min.css') }}">
     <link rel="stylesheet" href="{{ asset('assets/vendor/ionicons/css/ionicons.min.css') }}">
     <link rel="stylesheet" href="{{ asset('assets/vendor/select2/dist/css/select2.min.css') }}"/>
     <link rel="stylesheet" href="{{ asset('assets/vendor/DataTables/media/css/dataTables.bootstrap.min.css') }}">
@@ -77,11 +77,11 @@
     <a href="#" class="scroll-to-top hidden-print"><i class="fa fa-chevron-up fa-lg"></i></a>
 {% endblock %}
 
-<script type="text/javascript" src="{{ asset('assets/vendor/jquery/dist/jquery.js') }}"></script>
-<script type="text/javascript" src="{{ asset('assets/vendor/bootstrap/dist/js/bootstrap.js') }}"></script>
+<script type="text/javascript" src="{{ asset('assets/vendor/jquery/dist/jquery.min.js') }}"></script>
+<script type="text/javascript" src="{{ asset('assets/vendor/bootstrap/dist/js/bootstrap.min.js') }}"></script>
 <script type="text/javascript" src="{{ asset('assets/vendor/jquery-form/dist/jquery.form.min.js') }}"></script>
 <script type="text/javascript" src="{{ asset('assets/vendor/jquery-slimscroll/jquery.slimscroll.min.js') }}"></script>
-<script type="text/javascript" src="{{ asset('assets/vendor/bootbox/bootbox.js') }}"></script>
+<script type="text/javascript" src="{{ asset('assets/vendor/bootbox/bootbox.min.js') }}"></script>
 <script type="text/javascript" src="{{ asset('assets/vendor/select2/dist/js/select2.min.js') }}"></script>
 <script type="text/javascript"
         src="{{ asset('assets/vendor/select2/dist/js/i18n/'~ app.request.locale ~'.js') }}"></script>
