[Update] Actualizando gestión de chips a partir de tarjeta asociada
 - Validando rango de fechas válidas para generación de chips

--- a/app/Resources/views/chip/edit.html.twig
+++ b/app/Resources/views/chip/edit.html.twig
@@ -26,4 +26,5 @@
             'format': 'D/M/Y H:mm'
         });
     </script>
+    <script type="text/javascript" src="{{ asset('bundles/comb/js/chip/app.chip.dependencias.js') }}"></script>
 {% endblock %}
