--- a/app/Resources/views/chip/_form.html.twig
+++ b/app/Resources/views/chip/_form.html.twig
@@ -8,19 +8,19 @@
 
     <div class="row">
         <div class="col-md-12">
+            {{ form_row(form.tarjeta, {'attr': {'class': 'select2 chip-tarjeta'}}) }}
+        </div>
+        <div class="col-md-12">
+            {{ form_row(form.saldoInicial, {'attr': {'readonly': 1, 'class': 'input-saldo-inicial'}}) }}
+        </div>
+        <div class="col-md-12">
+            {{ form_row(form.cantcomb, {'attr': {'class': 'input-cant-comb'}}) }}
+        </div>
+        <div class="col-md-12">
+            {{ form_row(form.saldoFinal, {'attr': {'readonly': 1, 'class': 'input-saldo-final'}}) }}
+        </div>
+        <div class="col-md-12">
             {{ form_row(form.fecha, {'attr': {'class': 'datepicker'}}) }}
-        </div>
-        <div class="col-md-12">
-            {{ form_row(form.saldoInicial) }}
-        </div>
-        <div class="col-md-12">
-            {{ form_row(form.cantcomb) }}
-        </div>
-        <div class="col-md-12">
-            {{ form_row(form.saldoFinal) }}
-        </div>
-        <div class="col-md-12">
-            {{ form_row(form.tarjeta, {'attr': {'class': 'select2'}}) }}
         </div>
 
         {{ form_widget(form._token) }}
