--- a/app/Resources/views/solicitud/index.html.twig
+++ b/app/Resources/views/solicitud/index.html.twig
@@ -6,6 +6,12 @@
 
 {% block subheader 'request.list'|trans %}
 
+{% block stylesheets %}
+    <link rel="stylesheet"
+          href="{{ asset('assets/vendor/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css') }}"
+          type="text/css">
+{% endblock %}
+
 {% block container -%}
     {%- embed '_smart_widget.html.twig' %}
         {% set config, collapse, refresh, remove = true, true, false, false %}
@@ -13,7 +19,11 @@
             {{ 'request.list'|trans }}
         {% endblock widgetheader %}
 
-        {% block hidden_option_icon '<i></i>' %}
+        {% block hidden_option_icon '<i class="fa fa-table"></i>' %}
+
+        {% block hiddensection %}
+            {% include 'solicitud/_form_report.html.twig' with {'form': reportForm} %}
+        {% endblock hiddensection %}
 
         {% block widgetbody %}
             <div class="row">
@@ -31,9 +41,22 @@
 {% endblock %}
 
 {% block javascripts %}
+    <script type="text/javascript"
+            src="{{ asset('assets/vendor/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js') }}"></script>
+    <script type="text/javascript"
+            src="{{ asset('assets/vendor/bootstrap-datepicker/dist/locales/bootstrap-datepicker.es.min.js') }}"></script>
     <script type="text/javascript">
         $(document).ready(function () {
             $('#table-datatable').DataTable();
+        });
+        $('.select2').select2();
+        $('body').find('.select2-container').attr('style', 'width: 100%');
+        $('.monthpicker').datepicker({
+            autoclose: true,
+            language: 'es',
+            format: "mm/yyyy",
+            startView: "months",
+            minViewMode: "months"
         });
     </script>
 {% endblock %}
