--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -90,7 +90,7 @@
     // $.fn.select2.defaults.set("theme", "bootstrap");
 </script>
 <script type="text/javascript" src="{{ asset('assets/vendor/moment/min/moment.min.js') }}"></script>
-<script type="text/javascript" src="{{ asset('assets/vendor/moment/locale/es.js') }}"></script>
+<script type="text/javascript" src="{{ asset('assets/vendor/moment/locale/'~ app.request.locale ~'.js') }}"></script>
 <script type="text/javascript"
         src="{{ asset('assets/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js') }}"></script>
 <script type="text/javascript" src="{{ asset('assets/vendor/DataTables/media/js/jquery.dataTables.min.js') }}"></script>
